#1083 Upgrade Maven Surefire and Maven Failsafe Plugins
clean up configurations (forking and memory settings)