@@ -106,16 +106,4 @@
 
     </dependencies>
 
-    <build>
-        <plugins>
-
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <forkMode>pertest</forkMode>
-                    <argLine>-XX:MaxPermSize=192m</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
