@@ -64,9 +64,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <forkMode>once</forkMode>
                             <classpathDependencyScopeExclude>provided</classpathDependencyScopeExclude>
-                            <argLine>-XX:MaxPermSize=256M</argLine>
                             <systemProperties>
                                 <pax.exam.container>${pax.exam.container}</pax.exam.container>
                             </systemProperties>
