@@ -765,7 +765,6 @@
                 <configuration>
                     <parallel>none</parallel>
                     <classpathDependencyScopeExclude>provided</classpathDependencyScopeExclude>
-                    <argLine>-XX:MaxPermSize=256M</argLine>
                     <systemProperties>
                         <pax.exam.container>${pax.exam.container}</pax.exam.container>
                         <pax.exam.framework>${pax.exam.framework}</pax.exam.framework>
