@@ -152,7 +152,6 @@
                     <execution>
                         <id>persuite</id>
                         <configuration>
-                            <forkMode>once</forkMode>
                             <excludes>
                                 <exclude>**/perclass/*.java</exclude>
                             </excludes>
@@ -164,7 +163,6 @@
                 <configuration>
                     <parallel>none</parallel>
                     <classpathDependencyScopeExclude>provided</classpathDependencyScopeExclude>
-                    <argLine>-XX:MaxPermSize=256M</argLine>
                     <systemProperties>
                         <pax.exam.container>${pax.exam.container}</pax.exam.container>
                         <pax.exam.framework>${pax.exam.framework}</pax.exam.framework>
